--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "classnames": "^2.3.2",
     "faker": "^5.5.3",
     "immutable": "^5.0.0-beta.4",
     "react": "^18.2.0",
