--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.2.17",
     "classnames": "^2.3.2",
     "faker": "^5.5.3",
+    "fuse.js": "^7.0.0",
     "immutable": "^5.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
