--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fuse.js": "^7.0.0",
     "immer": "^10.0.3",
     "immutable": "^5.0.0-beta.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/faker": "^6.6.9",
+    "@types/lodash": "^4.14.202",
     "@types/uuid": "^9.0.7",
     "node-sass": "^7.0.3",
     "prettier": "^3.1.0"
