--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "array-sort": "^1.0.0",
     "classnames": "^2.3.2",
     "faker": "^5.5.3",
     "fuse.js": "^7.0.0",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/array-sort": "^1.0.3",
     "@types/faker": "^6.6.9",
     "@types/lodash": "^4.14.202",
     "@types/uuid": "^9.0.7",
